Bug 495329: Trace JSOP_BINDNAME/JSOP_SETNAME for closures, r=brendan